# OOP_4

./: CMakeLists.txt  main.cpp
include/: array.hpp  figure.hpp  hexagon.hpp  octagon.hpp  point.hpp  triangle.hpp
src/: array.cpp  figure.cpp  hexagon.cpp  octagon.cpp  point.cpp  triangle.cpp
tests/: test_figures.cpp
